Fix platform and some issues